# birdcage

./: CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  SECURITY.md  unsupported_syscalls
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: test.yml
examples/: full_sandbox.rs  partial_fs.rs  sandbox.rs
integration/: canonicalize.rs  command_io.rs  command_pipes.rs  consistent_id_mappings.rs  delete_before_lockdown.rs  env.rs  exec.rs  exec_symlinked_dir.rs  exec_symlinked_dirs_exec.rs  exec_symlinked_file.rs  fs.rs  fs_broken_symlink.rs  fs_null.rs  fs_readonly.rs  fs_restrict_child.rs  fs_symlink.rs  fs_symlink_dir.rs  fs_symlink_dir_separate_perms.rs  fs_write_also_read.rs  full_env.rs  full_sandbox.rs  harness.rs  missing_exception.rs  net.rs  seccomp.rs
src/: error.rs  lib.rs  linux.rs  macos.rs
src/linux/: mod.rs  namespaces.rs  seccomp.rs
src/process/: linux.rs  macos.rs  mod.rs
tests/: canonicalize.rs  consistent_id_mappings.rs  env.rs  exec.rs  exec_symlinked.rs  exec_symlinked_dir.rs  exec_symlinked_dirs_exec.rs  exec_symlinked_file.rs  fs.rs  fs_broken_symlink.rs  fs_null.rs  fs_readonly.rs  fs_remount.rs  fs_remount_symlink.rs  fs_restrict_child.rs  fs_symlink.rs  fs_symlink_dir.rs  fs_symlink_dir_separate_perms.rs  fs_truncate.rs  fs_without_landlock.rs  fs_write_also_read.rs  full_env.rs  full_sandbox.rs  link.rs  missing_exception.rs  net.rs  net_without_namespaces.rs  net_without_seccomp.rs  per_thread.rs  seccomp.rs
