[package]
name = "birdcage"
version = "0.8.1"
description = "Cross-platform embeddable sandbox"
authors = ["Phylum, Inc. <engineering@phylum.io>"]
repository = "https://github.com/phylum-dev/birdcage"
documentation = "https://docs.rs/birdcage"
rust-version = "1.66.0"
license = "GPL-3.0-or-later"
edition = "2021"

[[test]]
name = "harness"
path = "integration/harness.rs"
harness = false

[[test]]
name = "command_io"
path = "integration/command_io.rs"
harness = false

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.132"
log = "0.4.20"
rustix = { version = "0.38.31", features = ["pipe", "stdio", "thread", "process", "fs"] }
seccompiler = "0.3.0"

[dev-dependencies]
clap = { version = "3.2.17", features = ["derive"] }
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
tempfile = "3.3.0"

[dependencies]
bitflags = "2.4.0"
